--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
-    <string name="app_name">UIB</string>
+    <string name="app_name">YIB</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="acion_pay">Завершить продажу</string>
+    <string name="enter_amount">Введите сумму</string>
     <string name="text_payment_closed">Продажа завершена</string>
     <string name="new_sale">Новая продажа</string>
     <string name="printout_check">Распечатать товарный Чек</string>
+    <string name="error_amount">Введите правильные данные</string>
     <string name="to_pay">К оплате</string>
     <string name="go_to_pay">Перейти к оплате</string>
 </resources>
